Stretch and Bug Fixes

--- a/components/Carousel/Carousel.less
+++ b/components/Carousel/Carousel.less
@@ -37,15 +37,7 @@
   img {
     .width-100();
     display: none;
-
-    .slide {
-      animation-name: fade 1s ease-in-out;
-    }
     
-    @keyframes fade {
-      from {opacity: .4} 
-      to {opacity: 1}
-    }
   }
 
 }
